test/compile_errors/stage1/obj/invalid_field_access_in_comptime.zig
comptime { var x = doesnt_exist.whatever; _ = x; }

// invalid field access in comptime
//
// tmp.zig:1:20: error: use of undeclared identifier 'doesnt_exist'
